--- a/index.html
+++ b/index.html
@@ -1,225 +1,218 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Cloud Mining Oyun (Ayarlanabilir Kazanç Oranı)</title>
+  <meta charset="UTF-8">
+  <title>MTrxGame</title>
   <style>
-    body { margin:0; overflow:hidden; background:black; display:flex; justify-content:center; align-items:center; height:100vh; flex-direction:column; }
-    canvas { background:black; border:4px solid #555; box-shadow:0 0 20px rgba(255,255,255,0.2); }
-    #ui { position:absolute; top:12px; left:50%; transform:translateX(-50%); color:white; font-family:sans-serif; font-size:20px; }
-    #kazimPanel { position:absolute; top:12px; right:12px; background:#111; color:white; padding:10px 15px; border:2px solid #555; border-radius:10px; font-family:sans-serif; font-size:16px; }
-    #resetBtn { position:absolute; bottom:18px; right:18px; padding:10px 16px; background:#660000; color:white; border:none; border-radius:8px; cursor:pointer; }
-    #resetBtn:hover { background:#990000; }
+    body {
+      margin:0;
+      background:black;
+      color:white;
+      font-family:sans-serif;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      height:100vh;
+      overflow:hidden;
+    }
+    #wrapper {
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      width:100%;
+      height:100%;
+    }
+    .side-banner {
+      width:160px;
+      height:600px;
+      background:#111;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    #game-container {
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+    }
+    canvas {
+      background:black;
+      border:4px solid #555;
+      box-shadow:0 0 20px rgba(255,255,255,0.2);
+    }
+    #header {
+      margin-bottom:10px;
+      font-size:36px;
+      font-weight:bold;
+      text-shadow:0 0 10px #0f0;
+    }
+    #stats {
+      margin-bottom:10px;
+      text-align:center;
+      font-size:18px;
+    }
+    #rewardBtn {
+      margin-bottom:10px;
+      padding:8px 16px;
+      background:#222;
+      color:white;
+      border:none;
+      border-radius:8px;
+      cursor:pointer;
+    }
+    @media (max-width: 900px) {
+      .side-banner { display:none; }
+    }
   </style>
 </head>
 <body>
-  <div id="ui">Cloud Mining Oyunu</div>
-  <div id="kazimPanel">
-    Kazım Gücü: <span id="kazimGucu">0.0000000000</span><br>
-    Mevcut Kazım: <span id="mevcutKazim">0.00000000000</span>
+  <div id="wrapper">
+    <!-- Sol Banner -->
+    <div class="side-banner">
+      <script type="text/javascript">
+        atOptions = {
+          'key' : '7157a1985dbe1f33cf26181b535e83a1',
+          'format' : 'iframe',
+          'height' : 600,
+          'width' : 160,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/7157a1985dbe1f33cf26181b535e83a1/invoke.js"></script>
+    </div>
+
+    <!-- Oyun Ortada -->
+    <div id="game-container">
+      <div id="header">MTrxGame</div>
+      <div id="stats">
+        Kazım Gücü: <span id="kazimGucu">0.0000000000</span><br>
+        Mevcut Kazım: <span id="mevcutKazim">0.0000000000</span>
+      </div>
+      <button id="rewardBtn">Reklam İzle (2x)</button>
+      <canvas id="gameCanvas"></canvas>
+    </div>
+
+    <!-- Sağ Banner -->
+    <div class="side-banner">
+      <script type="text/javascript">
+        atOptions = {
+          'key' : '7157a1985dbe1f33cf26181b535e83a1',
+          'format' : 'iframe',
+          'height' : 600,
+          'width' : 160,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/7157a1985dbe1f33cf26181b535e83a1/invoke.js"></script>
+    </div>
   </div>
-  <button id="resetBtn">Sıfırla</button>
-  <canvas id="gameCanvas"></canvas>
 
   <script>
-    // 🔑 AYAR PARAMETRESİ
-    const KAZANC_ORANI = 100; 
-    // 100 = %1 kazanç
-    // 50  = %2 kazanç
-    // 20  = %5 kazanç
-    // 10  = %10 kazanç
-
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
-    canvas.width = 800;
-    canvas.height = 600;
 
-    const kazimGucuEl = document.getElementById("kazimGucu");
-    const mevcutKazimEl = document.getElementById("mevcutKazim");
-    const resetBtn = document.getElementById("resetBtn");
-
-    // --- localStorage yükleme ---
-    const storedKaz = localStorage.getItem("kazimGucu");
-    const storedMined = localStorage.getItem("mevcutKazim");
-    const storedLast = localStorage.getItem("lastUpdateMs");
+    canvas.width = window.innerWidth > 600 ? 480 : window.innerWidth * 0.9;
+    canvas.height = window.innerHeight > 600 ? 640 : window.innerHeight * 0.7;
 
     let kazimGucu = 0;
     let mevcutKazim = 0;
-    let lastUpdateMs = Date.now();
+    let multiplier = 1;
+    let lastUpdate = Date.now();
 
-    if (storedKaz === null && storedMined === null) {
-      kazimGucu = 0;
-      mevcutKazim = 0;
-      lastUpdateMs = Date.now();
-    } else {
-      kazimGucu = parseFloat(storedKaz) || 0;
-      mevcutKazim = parseFloat(storedMined) || 0;
-      lastUpdateMs = storedLast ? parseInt(storedLast) : Date.now();
-      const elapsedMs = Math.max(0, Date.now() - lastUpdateMs);
-      if (elapsedMs > 0 && kazimGucu > 0) {
-        // offline kazım (oranlı)
-        mevcutKazim += (kazimGucu / KAZANC_ORANI) * (elapsedMs / 1000);
-      }
-    }
+    const kazimGucuEl = document.getElementById("kazimGucu");
+    const mevcutKazimEl = document.getElementById("mevcutKazim");
+    const rewardBtn = document.getElementById("rewardBtn");
 
-    // --- görseller ---
-    const images = { stone: new Image(), silver: new Image(), gold: new Image(), red: new Image() };
+    const images = {
+      stone: new Image(),
+      silver: new Image(),
+      gold: new Image(),
+      red: new Image()
+    };
     images.stone.src = "stone.png";
     images.silver.src = "silver.png";
     images.gold.src = "gold.png";
     images.red.src = "red.png";
 
-    // --- oyun değişkenleri ---
-    let rocks = [];
-    let particles = [];
-    let fallSpeed = 2;
-    let spawnInterval = 1500;
-    let lastSpawn = 0;
-    let normalCount = 0;
-
     class Rock {
       constructor(type) {
         this.type = type;
-        this.size = Math.random() < 0.7 ? 60 : 90;
-        this.speed = this.size === 60 ? fallSpeed * 1.0 : fallSpeed * 0.6;
+        this.size = window.innerWidth > 600 ? 60 : 40;
         this.x = Math.random() * (canvas.width - this.size);
         this.y = -this.size;
-        this.rotation = 0;
-        this.rotationSpeed = (Math.random() - 0.5) * 0.1;
+        this.speed = Math.random() * 2 + 1;
       }
-      update() { this.y += this.speed; this.rotation += this.rotationSpeed; }
+      update() {
+        this.y += this.speed;
+      }
       draw() {
-        ctx.save();
-        ctx.translate(this.x + this.size/2, this.y + this.size/2);
-        ctx.rotate(this.rotation);
-        if (images[this.type] && images[this.type].complete) {
-          ctx.drawImage(images[this.type], -this.size/2, -this.size/2, this.size, this.size);
-        } else {
-          ctx.fillStyle = getColorForType(this.type);
-          ctx.fillRect(-this.size/2, -this.size/2, this.size, this.size);
-        }
-        ctx.restore();
+        ctx.drawImage(images[this.type], this.x, this.y, this.size, this.size);
       }
     }
 
-    class Particle {
-      constructor(x, y, color) {
-        this.x = x; this.y = y; this.radius = Math.random() * 4 + 2; this.color = color;
-        this.speedX = (Math.random() - 0.5) * 6; this.speedY = (Math.random() - 0.5) * 6; this.life = 40;
-      }
-      update() { this.x += this.speedX; this.y += this.speedY; this.radius *= 0.95; this.life--; }
-      draw() { ctx.beginPath(); ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2); ctx.fillStyle = this.color; ctx.fill(); }
-    }
+    let rocks = [];
+    let lastSpawn = 0;
 
     function spawnRock() {
-      normalCount++;
+      let r = Math.random();
       let type = "stone";
-      if (normalCount > 15 && Math.random() < 0.2) type = "silver";
-      if (normalCount > 30 && Math.random() < 0.1) type = "gold";
-      if (normalCount > 10 && Math.random() < 0.05) type = "red";
+      if (r > 0.85) type = "gold";
+      else if (r > 0.65) type = "silver";
+      else if (r > 0.9) type = "red";
       rocks.push(new Rock(type));
-      if (normalCount > 1000) normalCount = 0;
     }
 
-    function getColorForType(type) {
-      if (type === "stone") return "gray";
-      if (type === "silver") return "lightgray";
-      if (type === "gold") return "gold";
-      if (type === "red") return "red";
-      return "white";
-    }
-
-    // Oyun döngüsü
-    let lastFrame = null;
-    function gameLoop(ts) {
-      if (lastFrame === null) lastFrame = ts;
-      const deltaMs = ts - lastFrame;
-      const deltaSec = deltaMs / 1000;
-      lastFrame = ts;
-
-      // online kazım (oranlı)
-      if (kazimGucu > 0) mevcutKazim += (kazimGucu / KAZANC_ORANI) * deltaSec;
-
-      if (ts - lastSpawn > spawnInterval) {
-        spawnRock();
-        lastSpawn = ts;
-      }
-      fallSpeed += 0.0005;
-
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      for (let i = rocks.length - 1; i >= 0; i--) {
-        rocks[i].update();
-        rocks[i].draw();
-        if (rocks[i].y > canvas.height) rocks.splice(i, 1);
-      }
-      for (let i = particles.length - 1; i >= 0; i--) {
-        particles[i].update();
-        particles[i].draw();
-        if (particles[i].life <= 0 || particles[i].radius < 0.5) particles.splice(i, 1);
-      }
-
-      updateUI();
-      requestAnimationFrame(gameLoop);
-    }
-
-    // Tıklama
     canvas.addEventListener("click", (e) => {
       const rect = canvas.getBoundingClientRect();
       const mx = e.clientX - rect.left;
       const my = e.clientY - rect.top;
 
-      for (let i = rocks.length - 1; i >= 0; i--) {
-        const r = rocks[i];
-        if (mx > r.x && mx < r.x + r.size && my > r.y && my < r.y + r.size) {
-          for (let j = 0; j < 12; j++) particles.push(new Particle(r.x + r.size/2, r.y + r.size/2, getColorForType(r.type)));
-
-          if (r.type === "stone") kazimGucu += 0.0000000001;
-          else if (r.type === "silver") kazimGucu += 0.0000000010;
-          else if (r.type === "gold") kazimGucu += 0.0000000100;
-          else if (r.type === "red") {
-            if (Math.random() < 0.5) { // %50 ihtimalle düşür
-              kazimGucu = kazimGucu * 0.5;
-            }
-          }
-
-          // anlık ödül (oranlı)
-          if (r.type !== "red") mevcutKazim += kazimGucu / KAZANC_ORANI;
-
+      rocks.forEach((rock, i) => {
+        if (mx > rock.x && mx < rock.x + rock.size && my > rock.y && my < rock.y + rock.size) {
+          if (rock.type === "stone") kazimGucu += 0.0000000001;
+          if (rock.type === "silver") kazimGucu += 0.0000000010;
+          if (rock.type === "gold") kazimGucu += 0.0000000100;
+          if (rock.type === "red") kazimGucu *= 0.5;
           rocks.splice(i, 1);
-          saveGame();
-          break;
         }
+      });
+    });
+
+    function update() {
+      let now = Date.now();
+      let delta = (now - lastUpdate) / 1000;
+      lastUpdate = now;
+
+      mevcutKazim += kazimGucu * delta * multiplier * 0.01;
+
+      rocks.forEach(r => r.update());
+      rocks = rocks.filter(r => r.y < canvas.height);
+
+      if (Date.now() - lastSpawn > 1000) {
+        spawnRock();
+        lastSpawn = Date.now();
       }
-    });
-
-    function updateUI() {
-      kazimGucuEl.textContent = Number(kazimGucu || 0).toFixed(10);
-      mevcutKazimEl.textContent = Number(mevcutKazim || 0).toFixed(11);
     }
 
-    function saveGame() {
-      try {
-        localStorage.setItem("kazimGucu", kazimGucu.toString());
-        localStorage.setItem("mevcutKazim", mevcutKazim.toString());
-        localStorage.setItem("lastUpdateMs", Date.now().toString());
-      } catch (e) { console.warn("localStorage kaydetme hatası:", e); }
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      rocks.forEach(r => r.draw());
+      kazimGucuEl.textContent = kazimGucu.toFixed(10);
+      mevcutKazimEl.textContent = mevcutKazim.toFixed(10);
     }
-    const autoSave = setInterval(saveGame, 5000);
 
-    resetBtn.addEventListener("click", () => {
-      if (!confirm("Gerçekten sıfırlamak istiyor musun?")) return;
-      kazimGucu = 0;
-      mevcutKazim = 0;
-      localStorage.removeItem("kazimGucu");
-      localStorage.removeItem("mevcutKazim");
-      localStorage.setItem("lastUpdateMs", Date.now().toString());
-      updateUI();
+    function loop() {
+      update();
+      draw();
+      requestAnimationFrame(loop);
+    }
+
+    rewardBtn.addEventListener("click", () => {
+      multiplier = 2;
+      setTimeout(() => multiplier = 1, 60000);
     });
 
-    window.addEventListener("beforeunload", saveGame);
-
-    updateUI();
-    requestAnimationFrame(gameLoop);
+    loop();
   </script>
 </body>
 </html>
