--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       cursor:pointer;
     }
   </style>
+
+  <!-- Adsterra Social Bar -->
+  <script type='text/javascript' src='//pl27694130.revenuecpmgate.com/2e/94/88/2e948837a667b3f3ce9f88291ae3f2d3.js'></script>
 </head>
 <body>
   <div id="game-container">
@@ -107,9 +110,9 @@
     function spawnRock() {
       let r = Math.random();
       let type = "stone";
-      if (r > 0.85) type = "gold";
+      if (r > 0.9) type = "red";
+      else if (r > 0.85) type = "gold";
       else if (r > 0.65) type = "silver";
-      else if (r > 0.9) type = "red";
       rocks.push(new Rock(type));
     }
 
@@ -159,6 +162,7 @@
     }
 
     rewardBtn.addEventListener("click", () => {
+      // Reklam zaten Social Bar üzerinden açılacak
       multiplier = 2;
       setTimeout(() => multiplier = 1, 60000);
     });
