--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
       cursor:pointer;
     }
   </style>
-
-  <!-- Adsterra Social Bar -->
-  <script type='text/javascript' src='//pl27694130.revenuecpmgate.com/2e/94/88/2e948837a667b3f3ce9f88291ae3f2d3.js'></script>
 </head>
 <body>
   <div id="game-container">
@@ -162,7 +159,13 @@
     }
 
     rewardBtn.addEventListener("click", () => {
-      // Reklam zaten Social Bar üzerinden açılacak
+      // Social Bar script'i dinamik yükle
+      const script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src = "//pl27694130.revenuecpmgate.com/2e/94/88/2e948837a667b3f3ce9f88291ae3f2d3.js";
+      document.body.appendChild(script);
+
+      // 2x kazım gücü 60 saniye aktif
       multiplier = 2;
       setTimeout(() => multiplier = 1, 60000);
     });
